python/rregadmin/hive/hive_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -r ^hive_.* -o hive_wrapper.py hive_wrapper.xml'
from ctypes import *

from rregadmin.util.ustring_list_wrapper import gboolean
STRING = c_char_p
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.hive.types_wrapper import Hive
from rregadmin.util.value_wrapper import guint8
from rregadmin.util.ustring_list_wrapper import ustring
from rregadmin.hive.types_wrapper import guint32
from rregadmin.hive.types_wrapper import HiveVersion
from rregadmin.hive.types_wrapper import KeyCell
from rregadmin.hive.types_wrapper import SecurityDescriptorCell
from rregadmin.util.offset_wrapper import offset
from rregadmin.hive.types_wrapper import Bin
from rregadmin.hive.types_wrapper import used_stats
from rregadmin.hive.types_wrapper import Cell
from rregadmin.util.path_wrapper import guint
from rregadmin.util.glib_wrapper import gpointer
from rregadmin.hive.types_wrapper import used_stats


# ../../../rregadmin/hive/hive.h 52
hive_is_hive = _libraries['librregadmin.so.1'].hive_is_hive
hive_is_hive.restype = gboolean
# hive_is_hive(filename)
hive_is_hive.argtypes = [STRING]
hive_is_hive.__doc__ = \
"""gboolean hive_is_hive(unknown * filename)
../../../rregadmin/hive/hive.h:52"""
# ../../../rregadmin/hive/hive.h 60
hive_read = _libraries['librregadmin.so.1'].hive_read
hive_read.restype = POINTER(Hive)
# hive_read(filename)
hive_read.argtypes = [STRING]
hive_read.__doc__ = \
"""Hive * hive_read(unknown * filename)
../../../rregadmin/hive/hive.h:60"""
# ../../../rregadmin/hive/hive.h 66
hive_write = _libraries['librregadmin.so.1'].hive_write
hive_write.restype = gboolean
# hive_write(in_hive, filename)
hive_write.argtypes = [POINTER(Hive), STRING]
hive_write.__doc__ = \
"""gboolean hive_write(Hive * in_hive, unknown * filename)
../../../rregadmin/hive/hive.h:66"""
# ../../../rregadmin/hive/hive.h 72
hive_create = _libraries['librregadmin.so.1'].hive_create
hive_create.restype = POINTER(Hive)
# hive_create(name, buffer, len)
hive_create.argtypes = [STRING, POINTER(guint8), c_int]
hive_create.__doc__ = \
"""Hive * hive_create(unknown * name, guint8 * buffer, int len)
../../../rregadmin/hive/hive.h:72"""
# ../../../rregadmin/hive/hive.h 78
hive_preload = _libraries['librregadmin.so.1'].hive_preload
hive_preload.restype = None
# hive_preload(in_hive)
hive_preload.argtypes = [POINTER(Hive)]
hive_preload.__doc__ = \
"""void hive_preload(Hive * in_hive)
../../../rregadmin/hive/hive.h:78"""
# ../../../rregadmin/hive/hive.h 84
hive_new = _libraries['librregadmin.so.1'].hive_new
hive_new.restype = POINTER(Hive)
# hive_new(name)
hive_new.argtypes = [POINTER(ustring)]
hive_new.__doc__ = \
"""Hive * hive_new(unknown * name)
../../../rregadmin/hive/hive.h:84"""
# ../../../rregadmin/hive/hive.h 93
hive_free = _libraries['librregadmin.so.1'].hive_free
hive_free.restype = gboolean
# hive_free(in_hive)
hive_free.argtypes = [POINTER(Hive)]
hive_free.__doc__ = \
"""gboolean hive_free(Hive * in_hive)
../../../rregadmin/hive/hive.h:93"""
# ../../../rregadmin/hive/hive.h 99
hive_is_valid = _libraries['librregadmin.so.1'].hive_is_valid
hive_is_valid.restype = gboolean
# hive_is_valid(in_hive)
hive_is_valid.argtypes = [POINTER(Hive)]
hive_is_valid.__doc__ = \
"""gboolean hive_is_valid(unknown * in_hive)
../../../rregadmin/hive/hive.h:99"""
# ../../../rregadmin/hive/hive.h 105
hive_size = _libraries['librregadmin.so.1'].hive_size
hive_size.restype = guint32
# hive_size(hv)
hive_size.argtypes = [POINTER(Hive)]
hive_size.__doc__ = \
"""guint32 hive_size(unknown * hv)
../../../rregadmin/hive/hive.h:105"""
# ../../../rregadmin/hive/hive.h 111
hive_get_data_size = _libraries['librregadmin.so.1'].hive_get_data_size
hive_get_data_size.restype = guint32
# hive_get_data_size(in_hive)
hive_get_data_size.argtypes = [POINTER(Hive)]
hive_get_data_size.__doc__ = \
"""guint32 hive_get_data_size(unknown * in_hive)
../../../rregadmin/hive/hive.h:111"""
# ../../../rregadmin/hive/hive.h 117
hive_get_trailer_size = _libraries['librregadmin.so.1'].hive_get_trailer_size
hive_get_trailer_size.restype = guint32
# hive_get_trailer_size(in_hive)
hive_get_trailer_size.argtypes = [POINTER(Hive)]
hive_get_trailer_size.__doc__ = \
"""guint32 hive_get_trailer_size(unknown * in_hive)
../../../rregadmin/hive/hive.h:117"""
# ../../../rregadmin/hive/hive.h 123
hive_get_version = _libraries['librregadmin.so.1'].hive_get_version
hive_get_version.restype = POINTER(HiveVersion)
# hive_get_version(in_hive)
hive_get_version.argtypes = [POINTER(Hive)]
hive_get_version.__doc__ = \
"""unknown * hive_get_version(unknown * in_hive)
../../../rregadmin/hive/hive.h:123"""
# ../../../rregadmin/hive/hive.h 129
hive_get_root_key = _libraries['librregadmin.so.1'].hive_get_root_key
hive_get_root_key.restype = POINTER(KeyCell)
# hive_get_root_key(in_hive)
hive_get_root_key.argtypes = [POINTER(Hive)]
hive_get_root_key.__doc__ = \
"""KeyCell * hive_get_root_key(Hive * in_hive)
../../../rregadmin/hive/hive.h:129"""
# ../../../rregadmin/hive/hive.h 135
hive_get_first_security_descriptor_cell = _libraries['librregadmin.so.1'].hive_get_first_security_descriptor_cell
hive_get_first_security_descriptor_cell.restype = POINTER(SecurityDescriptorCell)
# hive_get_first_security_descriptor_cell(in_hive)
hive_get_first_security_descriptor_cell.argtypes = [POINTER(Hive)]
hive_get_first_security_descriptor_cell.__doc__ = \
"""SecurityDescriptorCell * hive_get_first_security_descriptor_cell(Hive * in_hive)
../../../rregadmin/hive/hive.h:135"""
# ../../../rregadmin/hive/hive.h 143
hive_get_name = _libraries['librregadmin.so.1'].hive_get_name
hive_get_name.restype = POINTER(ustring)
# hive_get_name(hv)
hive_get_name.argtypes = [POINTER(Hive)]
hive_get_name.__doc__ = \
"""ustring * hive_get_name(unknown * hv)
../../../rregadmin/hive/hive.h:143"""
# ../../../rregadmin/hive/hive.h 149
hive_get_state = _libraries['librregadmin.so.1'].hive_get_state
hive_get_state.restype = c_int
# hive_get_state(hv)
hive_get_state.argtypes = [POINTER(Hive)]
hive_get_state.__doc__ = \
"""int hive_get_state(unknown * hv)
../../../rregadmin/hive/hive.h:149"""
# ../../../rregadmin/hive/hive.h 158
hive_get_filename = _libraries['librregadmin.so.1'].hive_get_filename
hive_get_filename.restype = STRING
# hive_get_filename(hv)
hive_get_filename.argtypes = [POINTER(Hive)]
hive_get_filename.__doc__ = \
"""unknown * hive_get_filename(unknown * hv)
../../../rregadmin/hive/hive.h:158"""
# ../../../rregadmin/hive/hive.h 166
hive_set_dirty = _libraries['librregadmin.so.1'].hive_set_dirty
hive_set_dirty.restype = None
# hive_set_dirty(hv)
hive_set_dirty.argtypes = [POINTER(Hive)]
hive_set_dirty.__doc__ = \
"""void hive_set_dirty(Hive * hv)
../../../rregadmin/hive/hive.h:166"""
# ../../../rregadmin/hive/hive.h 172
hive_is_dirty = _libraries['librregadmin.so.1'].hive_is_dirty
hive_is_dirty.restype = gboolean
# hive_is_dirty(hv)
hive_is_dirty.argtypes = [POINTER(Hive)]
hive_is_dirty.__doc__ = \
"""gboolean hive_is_dirty(Hive * hv)
../../../rregadmin/hive/hive.h:172"""
# ../../../rregadmin/hive/hive.h 180
hive_get_page_count = _libraries['librregadmin.so.1'].hive_get_page_count
hive_get_page_count.restype = guint32
# hive_get_page_count(hv)
hive_get_page_count.argtypes = [POINTER(Hive)]
hive_get_page_count.__doc__ = \
"""guint32 hive_get_page_count(unknown * hv)
../../../rregadmin/hive/hive.h:180"""
# ../../../rregadmin/hive/hive.h 186
hive_get_bin_count = _libraries['librregadmin.so.1'].hive_get_bin_count
hive_get_bin_count.restype = guint32
# hive_get_bin_count(hv)
hive_get_bin_count.argtypes = [POINTER(Hive)]
hive_get_bin_count.__doc__ = \
"""guint32 hive_get_bin_count(unknown * hv)
../../../rregadmin/hive/hive.h:186"""
# ../../../rregadmin/hive/hive.h 192
hive_get_trailer_offset = _libraries['librregadmin.so.1'].hive_get_trailer_offset
hive_get_trailer_offset.restype = offset
# hive_get_trailer_offset(in_hive)
hive_get_trailer_offset.argtypes = [POINTER(Hive)]
hive_get_trailer_offset.__doc__ = \
"""offset hive_get_trailer_offset(unknown * in_hive)
../../../rregadmin/hive/hive.h:192"""
# ../../../rregadmin/hive/hive.h 198
hive_get_first_bin = _libraries['librregadmin.so.1'].hive_get_first_bin
hive_get_first_bin.restype = POINTER(Bin)
# hive_get_first_bin(in_hive)
hive_get_first_bin.argtypes = [POINTER(Hive)]
hive_get_first_bin.__doc__ = \
"""Bin * hive_get_first_bin(Hive * in_hive)
../../../rregadmin/hive/hive.h:198"""
# ../../../rregadmin/hive/hive.h 204
hive_get_last_bin = _libraries['librregadmin.so.1'].hive_get_last_bin
hive_get_last_bin.restype = POINTER(Bin)
# hive_get_last_bin(in_hive)
hive_get_last_bin.argtypes = [POINTER(Hive)]
hive_get_last_bin.__doc__ = \
"""Bin * hive_get_last_bin(unknown * in_hive)
../../../rregadmin/hive/hive.h:204"""
# ../../../rregadmin/hive/hive.h 210
hive_collect_stats = _libraries['librregadmin.so.1'].hive_collect_stats
hive_collect_stats.restype = None
# hive_collect_stats(in_hive, stats)
hive_collect_stats.argtypes = [POINTER(Hive), POINTER(used_stats)]
hive_collect_stats.__doc__ = \
"""void hive_collect_stats(Hive * in_hive, used_stats * stats)
../../../rregadmin/hive/hive.h:210"""
# ../../../rregadmin/hive/hive.h 218
hive_get_cell = _libraries['librregadmin.so.1'].hive_get_cell
hive_get_cell.restype = POINTER(Cell)
# hive_get_cell(in_hive, in_ofs)
hive_get_cell.argtypes = [POINTER(Hive), offset]
hive_get_cell.__doc__ = \
"""Cell * hive_get_cell(Hive * in_hive, offset in_ofs)
../../../rregadmin/hive/hive.h:218"""
# ../../../rregadmin/hive/hive.h 226
hive_get_cell_from_offset = _libraries['librregadmin.so.1'].hive_get_cell_from_offset
hive_get_cell_from_offset.restype = POINTER(Cell)
# hive_get_cell_from_offset(hv, in_ofs)
hive_get_cell_from_offset.argtypes = [POINTER(Hive), guint]
hive_get_cell_from_offset.__doc__ = \
"""Cell * hive_get_cell_from_offset(Hive * hv, guint in_ofs)
../../../rregadmin/hive/hive.h:226"""
# ../../../rregadmin/hive/hive.h 234
hive_find_bin = _libraries['librregadmin.so.1'].hive_find_bin
hive_find_bin.restype = POINTER(Bin)
# hive_find_bin(in_hive, in_ofs)
hive_find_bin.argtypes = [POINTER(Hive), offset]
hive_find_bin.__doc__ = \
"""Bin * hive_find_bin(Hive * in_hive, offset in_ofs)
../../../rregadmin/hive/hive.h:234"""
# ../../../rregadmin/hive/hive.h 244
hive_find_free_cell = _libraries['librregadmin.so.1'].hive_find_free_cell
hive_find_free_cell.restype = POINTER(Cell)
# hive_find_free_cell(in_hive, size)
hive_find_free_cell.argtypes = [POINTER(Hive), c_int]
hive_find_free_cell.__doc__ = \
"""Cell * hive_find_free_cell(Hive * in_hive, int size)
../../../rregadmin/hive/hive.h:244"""
# ../../../rregadmin/hive/hive.h 252
hive_get_offset = _libraries['librregadmin.so.1'].hive_get_offset
hive_get_offset.restype = offset
# hive_get_offset(in_hive, in_ofs)
hive_get_offset.argtypes = [POINTER(Hive), guint32]
hive_get_offset.__doc__ = \
"""offset hive_get_offset(Hive * in_hive, guint32 in_ofs)
../../../rregadmin/hive/hive.h:252"""
# ../../../rregadmin/hive/hive.h 260
hive_is_valid_offset = _libraries['librregadmin.so.1'].hive_is_valid_offset
hive_is_valid_offset.restype = gboolean
# hive_is_valid_offset(in_hive, in_ofs)
hive_is_valid_offset.argtypes = [POINTER(Hive), guint32]
hive_is_valid_offset.__doc__ = \
"""gboolean hive_is_valid_offset(unknown * in_hive, guint32 in_ofs)
../../../rregadmin/hive/hive.h:260"""
# ../../../rregadmin/util/offset_list.h 35
class offset_list_(Structure):
    pass
offset_list = offset_list_
# ../../../rregadmin/hive/hive.h 266
hive_get_cell_offset_list = _libraries['librregadmin.so.1'].hive_get_cell_offset_list
hive_get_cell_offset_list.restype = POINTER(offset_list)
# hive_get_cell_offset_list(in_hive)
hive_get_cell_offset_list.argtypes = [POINTER(Hive)]
hive_get_cell_offset_list.__doc__ = \
"""offset_list * hive_get_cell_offset_list(Hive * in_hive)
../../../rregadmin/hive/hive.h:266"""
# ../../../rregadmin/hive/hive.h 274
hive_register_cell = _libraries['librregadmin.so.1'].hive_register_cell
hive_register_cell.restype = gboolean
# hive_register_cell(in_hive, c)
hive_register_cell.argtypes = [POINTER(Hive), POINTER(Cell)]
hive_register_cell.__doc__ = \
"""gboolean hive_register_cell(Hive * in_hive, Cell * c)
../../../rregadmin/hive/hive.h:274"""
# ../../../rregadmin/hive/hive.h 282
hive_unregister_cell = _libraries['librregadmin.so.1'].hive_unregister_cell
hive_unregister_cell.restype = gboolean
# hive_unregister_cell(in_hive, c)
hive_unregister_cell.argtypes = [POINTER(Hive), POINTER(Cell)]
hive_unregister_cell.__doc__ = \
"""gboolean hive_unregister_cell(Hive * in_hive, Cell * c)
../../../rregadmin/hive/hive.h:282"""
# ../../../rregadmin/hive/hive.h 290
hive_retrieve_cell = _libraries['librregadmin.so.1'].hive_retrieve_cell
hive_retrieve_cell.restype = gpointer
# hive_retrieve_cell(hv, in_ofs)
hive_retrieve_cell.argtypes = [POINTER(Hive), offset]
hive_retrieve_cell.__doc__ = \
"""gpointer hive_retrieve_cell(Hive * hv, offset in_ofs)
../../../rregadmin/hive/hive.h:290"""
# ../../../rregadmin/hive/hive.h 298
hive_debug_print = _libraries['librregadmin.so.1'].hive_debug_print
hive_debug_print.restype = None
# hive_debug_print(in_hive, in_verbose)
hive_debug_print.argtypes = [POINTER(Hive), gboolean]
hive_debug_print.__doc__ = \
"""void hive_debug_print(unknown * in_hive, gboolean in_verbose)
../../../rregadmin/hive/hive.h:298"""
# ../../../rregadmin/hive/hive.h 307
hive_get_xml_output = _libraries['librregadmin.so.1'].hive_get_xml_output
hive_get_xml_output.restype = gboolean
# hive_get_xml_output(in_hive, in_output, in_verbose)
hive_get_xml_output.argtypes = [POINTER(Hive), POINTER(ustring), gboolean]
hive_get_xml_output.__doc__ = \
"""gboolean hive_get_xml_output(unknown * in_hive, ustring * in_output, gboolean in_verbose)
../../../rregadmin/hive/hive.h:307"""
offset_list_._fields_ = [
    # ../../../rregadmin/util/offset_list.h 35
]
__all__ = ['hive_get_filename', 'hive_get_state',
           'hive_find_free_cell', 'hive_get_data_size',
           'offset_list_', 'hive_get_cell_from_offset',
           'hive_debug_print', 'hive_write',
           'hive_get_cell_offset_list', 'hive_get_first_bin',
           'hive_get_trailer_size', 'hive_get_trailer_offset',
           'hive_set_dirty', 'hive_retrieve_cell', 'hive_find_bin',
           'hive_is_dirty', 'hive_is_valid_offset',
           'hive_get_version', 'hive_size', 'hive_collect_stats',
           'hive_read', 'hive_get_last_bin', 'hive_preload',
           'hive_get_name', 'hive_get_offset', 'hive_get_xml_output',
           'hive_get_page_count',
           'hive_get_first_security_descriptor_cell', 'hive_free',
           'hive_get_bin_count', 'hive_get_cell', 'hive_get_root_key',
           'hive_is_hive', 'hive_is_valid', 'hive_new', 'hive_create',
           'hive_register_cell', 'hive_unregister_cell',
           'offset_list']
